add docs and response for show all openings handler
