# handler/listOpenings.go
@@ -7,11 +7,21 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+//@BasePath /api/v1
+
+// @Summary List opening
+// @Description List all job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningsHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
 	if err := db.Find(&openings).Error; err != nil {
-		sendError(ctx, http.StatusInternalServerError, "error listininge erros")
+		sendError(ctx, http.StatusInternalServerError, "error listining erros")
 	}
 
 	sendSuccess(ctx, "list-openings", openings)
